--- a/gitnews/Gemfile
+++ b/gitnews/Gemfile
@@ -5,8 +5,6 @@ gem 'rails', '3.2.6'
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
-gem 'sqlite3'
-
 
 # Gems used only for assets and not required
 # in production environments by default.
@@ -25,7 +23,12 @@ gem 'jquery-rails'
 group :development, :test do
   gem 'rspec-rails'
   gem 'debugger'
+  gem 'sqlite3'
+end
 
+group :production do
+  gem 'pg'
+  gem 'thin'
 end
 
 # To use ActiveModel has_secure_password
